Deployments/invoiceservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoiceservice-depl
spec:
  selector:
    matchLabels:
      app: invoiceservice
  replicas: 1
  template:
    metadata:
      labels:
        app: invoiceservice
    spec:
      containers:
      - name: invoiceservice
        image: mananparmar/invoice-service:v1.0
        ports:
        - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: invoiceservice-clusterip
spec:
  selector:
    app: invoiceservice
  ports:
  - port: 80
    targetPort: 9090
  type: ClusterIP
