Deployments/labtestdb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labtestdb-depl
spec:
  selector:
    matchLabels:
      app: labtest-db
  template:
    metadata:
      labels:
        app: labtest-db
    spec:
      containers:
      - name: labtest-db
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: labtest-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: labtestdb-clusterip
spec:
  selector:
    app: labtest-db
  ports:
    - port: 5432
      targetPort: 5432
