Deployments/labtestservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labtestservice-depl
spec:
  selector:
    matchLabels:
      app: labtestservice
  template:
    metadata:
      labels:
        app: labtestservice
    spec:
      containers:
      - name: labtestservice
        image: harshitha729/labtest-service
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: labtestservice-clusterip
spec:
  selector:
    app: labtestservice
  ports:
    - port: 80
      targetPort: 8000
