Deployments/userservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice-depl
spec:
  selector:
    matchLabels:
      app: userservice-depl
  template:
    metadata:
      labels:
        app: userservice-depl
    spec:
      containers:
      - name: userservice-depl
        image: nihal597/user-service
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-clusterip
spec:
  selector:
    app: userservice-depl
  ports:
  - port: 80
    targetPort: 9000
