Deployments/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api/users"
        backend:
          service:
            name: userservice-clusterip
            port: 
              number: 80
