Deployments/labtest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labtest-ingress
  labels:
    name: labtest-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: labtestservice-clusterip
            port:
              number: 80
